2011-04-28  Bernhard Walle <bernhard@bwalle.de>

	* stringutil: Convert boolean values to "false"/"true".
	* Add 'apidoc' and 'tags' target to CMake.

2011-04-27  Bernhard Walle <bernhard@bwalle.de>

	* Add Datetime class.
	* Use Datetime for the logging timestamp.
	* Add default constructor for Datetime.
	* Fix bug in replace_char when multiple replacements have to
	  be made.

2011-04-26  Bernhard Walle <bernhard@bwalle.de>

	* Add bw::str().
	* Fix replace_char(): Don't delete everything after the first
	  character that should be replaced.
	* serialfile: Don't crash when the devices doesn't exist.

2011-04-25  Bernhard Walle <bernhard@bwalle.de>

	* Add option grouping to the OptionParser.
	* Fix include of bwerror.h in <io/serialfile.h>.
	* Add 'string' group to the doxygen documentation.

2011-04-23  Bernhard Walle <bernhard@bwalle.de>

	* Add Debug to the 'log' doxygen group.
	* Include <string> in <libbw/log/debug.h>.

2011-04-22  Bernhard Walle <bernhard@bwalle.de>

	* Move logging (both debug log and error log) in own subdirectory.
	* Add Doxygen group 'log'.
	* Add bw::thread::MutexLocker.
	* Use localtime_r() if available.
	* Make error logging thread safe.

2011-04-18  Bernhard Walle <bernhard@bwalle.de>

	* Add error logging.

2011-04-17  Bernhard Walle <bernhard@bwalle.de>

	* Fix include path when using in an project.

2011-04-17  Bernhard Walle <bernhard@bwalle.de>

	* Add CMake build open 'BUILD_EXAMPLES' that allows to build the
	  library only.
	* Add SerialFile::readLine() method.
	* Use the SerialFile::readLine() method in the example.
	* SerialFile: Don't return empty strings for each line.
	* SerialFile: Disable translation of \r to \n.

2011-03-06  Bernhard Walle <bernhard@bwalle.de>

	* Don't try to link against libcurses when libreadline has not been
	  found.
	* Change completion interface from ssize_t to int since Win32 has no
	  ssize_t.
	* Add compatibility strcasecmp() for Win32.
	* Only include "unistd.h" if we have it.